# split-translator

./: .gitignore  README.md  config.sample.json  pyproject.toml  requirements.txt  translation_tool.py
split_translator/: __init__.py  __main__.py  anchor_book_view.py  anchor_click_bridge.py  anchor_editor.py  anchor_store.py  app.py  book_loader.py  book_panel.py  book_render.py  book_sync.py  book_view.py  capture_bridge.py  config.py  dictionary_panel.py  flashcard_editor_base.py  flashcard_editor_state.py  flashcard_graph.py  flashcard_panel.py  flashcard_print_layout.py  flashcard_print_panel.py  flashcard_print_view.py  flashcard_print_window.py  flashcards.py  graph_layout.py  history.py  main_window.py  page_mapper.py  pdf_panel.py  pdf_viewer.py  shortcuts.py  shortcuts_dialog.py  status_bar.py  web.py
tests/: test_anchor_editor.py  test_anchor_store.py  test_book_loader.py  test_book_panel.py  test_book_panel_sentence.py  test_book_render.py  test_book_sentence_routing.py  test_book_sync.py  test_book_view_sentence.py  test_capture_pos.py  test_capture_target_routing.py  test_config.py  test_dictionary_panel.py  test_flashcard_dock_title.py  test_flashcard_dock_toggle.py  test_flashcard_editor_state.py  test_flashcard_graph.py  test_flashcard_links.py  test_flashcard_panel.py  test_flashcard_panel_links.py  test_flashcard_print_layout.py  test_flashcard_print_panel.py  test_flashcard_print_view.py  test_flashcard_print_window.py  test_flashcards.py  test_graph_layout.py  test_headword_source.py  test_history.py  test_lazy_tabs.py  test_match_block_js.py  (+7 more)
(+1 files in other folders)
